tests/ui/async-await/mutually-recursive-async-impl-trait-type.stderr
error[E0733]: recursion in an async fn requires boxing
  --> $DIR/mutually-recursive-async-impl-trait-type.rs:5:1
   |
LL | async fn rec_1() {
   | ^^^^^^^^^^^^^^^^
LL |     rec_2().await;
   |     ------------- recursive call here
...
LL |     rec_1().await;
   |     ------------- ...which calls this
   |
   = note: a recursive `async fn` call must introduce indirection such as `Box::pin` to avoid an infinitely sized future
   = note: consider using the `async_recursion` crate: https://crates.io/crates/async_recursion

error: aborting due to previous error

For more information about this error, try `rustc --explain E0733`.
